--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 :root {
@@ -16,7 +17,6 @@
 body {
     color: var(--color-foreground);
     background-color: var(--color-background);
-    overflow: hidden;
 }
 
 /* Book info */
@@ -80,6 +80,7 @@ body {
     color: var(--color-foreground);
     opacity: 0.3;
     font-family: "Lora";
+    user-select: none;
 
     transition: opacity 0.3s ease-in-out;
 }
@@ -93,6 +94,9 @@ body {
 #wpm-monitor span {
     margin-left: 1em;
     margin-right: 1em;
+    color: var(--color-foreground);
+    opacity: 0.3;
+    user-select: none;
 }
 #wpm-monitor #current-wpm {
     color: var(--color-foreground);
@@ -102,11 +106,11 @@ body {
 
 /* Buttons */
 .button {
-    color: rgba(255, 255, 255, 0.3);
-    /*transition: 0.2s;*/
+    color: var(--color-foreground);
+    opacity: 0.3;
 }
 .button:hover {
-    color: rgba(255, 255, 255, 1);
+    opacity: 1;
     cursor: pointer;
 }
 
@@ -165,4 +169,37 @@ body {
 }
 #menu-close-button:hover {
     cursor: pointer;
+}
+
+/* Smartphone specific CSS */
+@media (max-width: 768px) and (orientation: portrait) {
+    #wpm-monitor {
+        font-size: 5vmin;
+        justify-content: space-between;
+    }
+    #center-div {
+        height: 30vh;
+        width: 100%;
+    }
+    #footer {
+        left: 50%;
+        transform: translateX(-50%);
+        width: 90%;
+        text-align: center;   
+    }
+    #menu-options {
+        transform: translate(-50%, -70%);
+    }
+    .menu-option {
+        font-size: 6vmin;
+        margin-bottom: 1em;
+        line-height: 1;
+    }
+    #menu-close-button {
+        bottom: 15%;
+        font-size: 6vmin;
+    }
+    #current-word {
+        font-size: 13vmin;
+    }
 }
